<resources>
    <string name="app_version_name" translatable="false">\"Blue\"</string>
    <string name="app_name" translatable="false">Radio</string>
    <string name="descr_app_icon">App icon depicting an old radio</string>
    <string name="descr_card_small_play_button">Play/stop</string>
    <string name="descr_card_starred_station">Starred station</string>
    <string name="descr_card_station_image_change">Change station image</string>
    <string name="descr_card_station_image">Station image</string>
    <string name="descr_expanded_player_metadata_copy_button">Copy the now playing information</string>
    <string name="descr_expanded_player_metadata_next_button">Next now playing metadata entry</string>
    <string name="descr_expanded_player_metadata_previous_button">Previous now playing metadata entry</string>
    <string name="descr_expanded_player_sleep_timer_cancel_button">Cancel sleep timer</string>
    <string name="descr_expanded_player_sleep_timer_remaining_time">Time remaining on sleep timer</string>
    <string name="descr_expanded_player_sleep_timer_start_button">Start sleep timer</string>
    <string name="descr_player_playback_button">Play/pause</string>
    <string name="descr_player_station_image">Station image</string>
    <string name="descr_player_search_button">Search stations</string>
    <string name="dialog_add_station_title">Add Station</string>
    <string name="dialog_edit_station_name">Station name</string>
    <string name="dialog_edit_stream_uri">Stream address</string>
    <string name="dialog_error_message_default">An error occurred</string>
    <string name="dialog_error_message_no_network">Connect to the Internet.</string>
    <string name="dialog_error_title_no_network">Offline</string>
    <string name="dialog_find_station_button_add">Add</string>
    <string name="dialog_find_station_hint">Name or stream address</string>
    <string name="dialog_find_station_no_results">No results found.</string>
    <string name="dialog_find_station_title">Find Station</string>
    <string name="dialog_generic_button_cancel">Cancel</string>
    <string name="dialog_generic_button_okay">OK</string>
    <string name="dialog_generic_details_button">Show details</string>
    <string name="dialog_opml_import_details_default">No details available</string>
    <string name="dialog_restore_collection_replace_existing">Replace current collection of radio stations with the radio station from backup?</string>
    <string name="dialog_yes_no_message_remove_station">Remove this station?</string>
    <string name="dialog_yes_no_message_update_station_images">Download latest version of all station images?</string>
    <string name="dialog_yes_no_positive_button_default">Yes</string>
    <string name="dialog_yes_no_positive_button_remove_station">Remove</string>
    <string name="dialog_yes_no_positive_button_update_covers">Update</string>
    <string name="cast_connected_to">Connected with</string>
    <string name="cast_stop_casting">Stop casting</string>
    <string name="cast_cancel">Cancel</string>
    <string name="cast_chooser_title">Cast to</string>
    <string name="cast_no_devices">No devices found</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="license_name">Licenses</string>
    <string name="player_name">Player</string>
    <string name="notification_now_playing_channel_name">Playback Controls</string>
    <string name="notification_channel_name">Notifications</string>
    <string name="notification_play">Play</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_skip_to_previous">Previous</string>
    <string name="notification_skip_to_next">Next</string>
    <string name="notification_test_content">This is a test notification.</string>
    <string name="notification_channel_description">All notifications about the app.</string>
    <string name="onboarding_app_description">Immerse yourself in the sound of your choice!</string>
    <string name="onboarding_app_get_started">Get started</string>
    <string name="player_sheet_h2_station_metadata">Currently playing</string>
    <string name="player_sheet_h2_stream_url">Streaming link</string>
    <string name="pref_language_selection_title">Language</string>
    <string name="pref_language_selection_summary">Current language</string>
    <string name="pref_language_system">🗺️ System</string>
    <string name="pref_language_en" translatable="false">🇬🇧 English</string>
    <string name="pref_language_de" translatable="false">🇩🇪 Deutsch</string>
    <string name="pref_language_fr" translatable="false">🇫🇷 Français</string>
    <string name="pref_language_ru" translatable="false">🇷🇺 Русский</string>
    <string name="pref_language_ja" translatable="false">🇯🇵 日本語</string>
    <string name="pref_language_nl" translatable="false">🇳🇱 Nederlands</string>
    <string name="pref_language_pl" translatable="false">🇵🇱 Polski</string>
    <string name="pref_language_el" translatable="false">🇬🇷 Ελληνικά</string>
    <string name="pref_language_da" translatable="false">🇩🇰 Dansk</string>
    <string name="pref_language_uk" translatable="false">🇺🇦 Українська</string>
    <string name="pref_update_collection_title">Update Stations</string>
    <string name="pref_update_collection_summary">Download latest version of all station.</string>
    <string name="dialog_yes_no_message_update_collection">Download latest version of all station?</string>
    <string name="dialog_yes_no_positive_button_update_collection">Update</string>
    <string name="pref_audio_effects_title">Audio Effects</string>
    <string name="pref_bass_boost_title">Bass Boost</string>
    <string name="pref_bass_boost_summary">Increase bass gain.</string>
    <string name="pref_reverb_title">Reverb</string>
    <string name="pref_reverb_summary">Adjust reverb mix.</string>
    <string name="pref_drc_title">Dynamic Range Compression</string>
    <string name="pref_drc_summary">Compress dynamic range for consistent volume.</string>
    <string name="pref_eq_low_title">Equalizer: 31 Hz</string>
    <string name="pref_eq_mid_title">Equalizer: 125 Hz</string>
    <string name="pref_eq_high_title">Equalizer: 4 kHz</string>
    <string name="pref_eq_band_1_title">Equalizer: 62 Hz</string>
    <string name="pref_eq_band_2_title">Equalizer: 250 Hz</string>
    <string name="pref_eq_band_3_title">Equalizer: 500 Hz</string>
    <string name="pref_eq_band_4_title">Equalizer: 1 kHz</string>
    <string name="pref_eq_band_5_title">Equalizer: 2 kHz</string>
    <string name="pref_eq_band_6_title">Equalizer: 8 kHz</string>
    <string name="pref_eq_band_7_title">Equalizer: 16 kHz</string>
    <string name="pref_equalizer_title">Equalizer</string>
    <string name="pref_equalizer_summary">Adjust audio frequencies</string>
    <string name="pref_equalizer_summary_off">Adjust audio frequencies is off.</string>
    <string name="pref_equalizer_reset_title">Reset Equalizer</string>
    <string name="pref_preset_selection_title">Select Preset</string>
    <string name="pref_preset_selection_summary">Choose an audio preset</string>
    <string name="pref_preset_none">None (Manual)</string>
    <string name="pref_preset_rock">Rock</string>
    <string name="pref_preset_pop">Pop</string>
    <string name="pref_preset_jazz">Jazz</string>
    <string name="pref_preset_flat">Flat</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_arguments_title">Arguments</string>
    <string name="pref_arguments_summary">Enter arguments for the app.</string>
    <string name="pref_app_version_summary">Version</string>
    <string name="pref_app_version_title">App Version</string>
    <string name="pref_backup_import_export_title">Import &amp; Export</string>
    <string name="pref_buffer_size_summary_disabled">Using the default buffer size for playing a radio stream.</string>
    <string name="pref_buffer_size_summary_enabled">Larger buffer for playing a radio stream enabled. It may take longer for the playback to start.</string>
    <string name="pref_buffer_size_title">Use Larger Buffer</string>
    <string name="pref_edit_station_stream_summary_disabled">Editing of streaming links disabled. </string>
    <string name="pref_edit_station_stream_summary_enabled">Editing of streaming links enabled. Make sure to enter a correct stream address.</string>
    <string name="pref_edit_station_stream_title">Edit Streaming Links</string>
    <string name="pref_edit_station_summary_disabled">Editing of station information disabled.</string>
    <string name="pref_edit_station_summary_enabled">Editing of station information enabled. Use long press to enter edit mode.</string>
    <string name="pref_edit_station_title">Edit Stations</string>
    <string name="pref_general_title">General</string>
    <string name="pref_github_title" translatable="false">GitHub</string>
    <string name="pref_github_summary" translatable="false">github.com/michatec/Radio</string>
    <string name="pref_license_title">This application is open source</string>
    <string name="pref_license_summary">Licensed under the GPLv3 License</string>
    <string name="pref_license_app_title">Third-Party Licenses</string>
    <string name="pref_license_app_summary">Open source libraries used in this project</string>
    <string name="pref_security_title">Security</string>
    <string name="pref_security_summary">Learn more about the security of this application</string>
    <string name="pref_links_title">Links</string>
    <string name="pref_m3u_export_summary">Save your radio stations to an M3U playlist file that can be imported into other players.</string>
    <string name="pref_m3u_export_title">Export M3U</string>
    <string name="pref_maintenance_title">Maintenance</string>
    <string name="pref_pls_export_summary">Save your radio stations to an PLS playlist file that can be imported into other players.</string>
    <string name="pref_pls_export_title">Export PLS</string>
    <string name="pref_station_export_summary">Save entire collection of radio stations including images to device storage.</string>
    <string name="pref_station_export_title">Export Stations</string>
    <string name="pref_station_restore_summary">Restore collection of radio stations from backup. Existing stations will be replaced.</string>
    <string name="pref_station_restore_title">Restore Stations</string>
    <string name="pref_theme_selection_mode_dark">Dark mode</string>
    <string name="pref_theme_selection_mode_device_default">Same as device</string>
    <string name="pref_theme_selection_mode_light">Light mode</string>
    <string name="pref_theme_selection_summary">Current theme:</string>
    <string name="pref_theme_selection_title">App Theme</string>
    <string name="pref_update_station_images_summary">Download latest version of all station images.</string>
    <string name="pref_update_station_images_title">Update Station Images</string>
    <string name="pref_test_notification_title">Test Notification</string>
    <string name="pref_test_notification_summary">Test whether the notification system works.</string>
    <string name="pref_share_app_title">Share App</string>
    <string name="pref_share_app_summary">Recommend this app to a friend.</string>
    <string name="pref_visualizer_title">Spectrum Analyzer</string>
    <string name="pref_custom_theme_title">Custom Theme</string>
    <string name="theme_predefined_colors">Predefined Colors (Light/Dark):</string>
    <string name="theme_custom_rgb">Custom RGB (please adapt to the app):</string>
    <string name="theme_red">Red</string>
    <string name="theme_green">Green</string>
    <string name="theme_blue">Blue</string>
    <string name="search_hint">Search stations…</string>
    <string name="search_filter_favorites">Only favorites</string>
    <string name="search_no_results">No stations found.</string>
</resources>