<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/predefined_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/theme_predefined_colors"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/color_recycler_view"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/color_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/predefined_label"
            tools:listitem="@layout/element_color_circle" />

        <TextView
            android:id="@+id/custom_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/theme_custom_rgb"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_recycler_view" />

        <LinearLayout
            android:id="@+id/rgb_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rgb_controls_border"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/custom_label">

            <TextView
                android:id="@+id/red_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_red" />

            <SeekBar
                android:id="@+id/seek_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:focusable="true" />

            <TextView
                android:id="@+id/green_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/theme_green" />

            <SeekBar
                android:id="@+id/seek_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:focusable="true" />

            <TextView
                android:id="@+id/blue_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/theme_blue" />

            <SeekBar
                android:id="@+id/seek_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:focusable="true" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/color_preview_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_rgb_controls_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgb_controls">

            <View
                android:id="@+id/color_preview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/black" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hex_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_preview_border">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hex_code"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textCapCharacters"
                android:maxLength="9"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="#FF000000" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
